# rust-liquid-rpc

./: .gitignore
client/: Cargo.toml  README.md
client/src/: error.rs  lib.rs
json/: Cargo.toml  README.md
json/src/: amount.rs  lib.rs
