[package]
name = "liquid-rpc-json"
version = "0.2.0"
authors = ["Steven Roose <steven@stevenroose.org>"]
description = "JSON-enabled type structs for liquid-rpc crate."
license = "CC0-1.0"
homepage = "https://github.com/stevenroose/rust-liquid-rpc/"
repository = "https://github.com/stevenroose/rust-liquid-rpc/"
documentation = "https://docs.rs/liquid-rpc-json/"
keywords = [ "bitcoin", "liquid", "elements", "blockstream" ]
readme = "README.md"

[lib]
name = "liquid_rpc_json"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc = "0.11"

serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

elements = { version = "0.12.0", features = [ "serde-feature" ] }
